update 18 Jan v1
